--- a/section-5-1-VITE/vite-project/package.json
+++ b/section-5-1-VITE/vite-project/package.json
@@ -9,11 +9,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "eslint": "^9.11.0",
-    "vite": "^5.4.7",
-    "vite-plugin-eslint": "^1.8.1"
-  },
-  "dependencies": {
-    "sass": "^1.79.2"
+    "vite": "^5.4.1"
   }
 }
