--- a/MusicPlayer/MusicPlayer/package.json
+++ b/MusicPlayer/MusicPlayer/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vee-validate/rules": "^4.13.2",
+    "firebase": "^8.10.1",
     "pinia": "^2.1.7",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
