--- a/MusicPlayer/MusicPlayer/package.json
+++ b/MusicPlayer/MusicPlayer/package.json
@@ -16,9 +16,11 @@
     "@vee-validate/rules": "^4.13.2",
     "firebase": "^8.10.1",
     "howler": "^2.2.4",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
+    "vue-i18n": "^9.14.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "start-server-and-test": "^2.0.4",
     "tailwindcss": "^3.4.13",
     "vite": "^5.3.1",
+    "vite-plugin-pwa": "^0.20.5",
     "vitest": "^1.6.0"
   }
 }
