--- a/section-22-5-STARTER/package.json
+++ b/section-22-5-STARTER/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emoji-button-temp",
+  "name": "modal",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,12 +7,11 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "@joeattardi/emoji-button": "^4.6.4",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.1.3",
     "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.1",
-    "vite": "^3.0.1"
+    "@vitejs/plugin-vue": "^2.3.3",
+    "vite": "^2.9.12"
   }
 }
